# Met

./: .gitignore  Greedy_lora_ToDo.md  Improvement_ToDo.md  Makefile  README.md  ess.2.md  ess1.md  grmet_acl_merged.md  grmet_acl_merged_long.md  pyproject.toml  todo.md
configs/: batch_config_example.json  full_experiment_config.json
data/: counterfact_500.json  counterfact_qna_sample_500.json
docs/: experiment_scripts.md  init_guide.md  method_overview.md
results/baseline_comparison_rome_memit/: ablation_matrix.csv  baseline_comparison_rome_memit.csv  baseline_comparison_rome_memit.txt  baseline_comparison_rome_memit_stats.csv  replay_ablation.csv  trust_events.csv  trust_summary.csv  trust_with_metrics.csv  trust_with_metrics_key.csv
results/emmet_lora_compare_20251117_021238/: ablation_matrix.csv  emmet_lora_compare.csv  emmet_lora_compare.txt  emmet_lora_compare_stats.csv  replay_ablation.csv  trust_events.csv  trust_summary.csv  trust_with_metrics.csv  trust_with_metrics_key.csv
results/emmet_lora_compare_20251117_022926/: ablation_matrix.csv  emmet_lora_compare.csv  emmet_lora_compare.txt  emmet_lora_compare_stats.csv  replay_ablation.csv  trust_events.csv  trust_summary.csv  trust_with_metrics.csv  trust_with_metrics_key.csv
results/emmet_lora_compare_20251117_025702/: ablation_matrix.csv  emmet_lora_compare.csv  emmet_lora_compare.txt  emmet_lora_compare_stats.csv  replay_ablation.csv  trust_events.csv  trust_summary.csv  trust_with_metrics.csv  trust_with_metrics_key.csv
results/emmet_lora_compare_20251117_030102/: ablation_matrix.csv  emmet_lora_compare.csv  emmet_lora_compare.txt  emmet_lora_compare_stats.csv  replay_ablation.csv  trust_events.csv  trust_summary.csv  trust_with_metrics.csv  trust_with_metrics_key.csv
results/emmet_lora_compare_20251117_030847/: ablation_matrix.csv  emmet_lora_compare.csv  emmet_lora_compare.txt  emmet_lora_compare_stats.csv  replay_ablation.csv  trust_events.csv  trust_summary.csv  trust_with_metrics.csv  trust_with_metrics_key.csv
results/emmet_lora_compare_20251117_032316/: ablation_matrix.csv  emmet_lora_compare.csv  emmet_lora_compare.txt  emmet_lora_compare_stats.csv  replay_ablation.csv  trust_events.csv  trust_summary.csv  trust_with_metrics.csv  trust_with_metrics_key.csv
results/emmet_lora_trust_replay_20251117_033643/: ablation_matrix.csv  (+8 more)
scripts/: README.md  analyze_results.py  analyze_trust_thresholds.py  build_package.sh  download_models.py  minimal_test.py  plot_combined_experiments.py  plot_forgetting_curve.py  prepare_data.py  quick_test.cmd  quick_test.sh  run_all_baselines.cmd  run_all_baselines.py  run_all_baselines.sh  run_baseline.py  run_batch_experiments.py  run_combined_experiments.cmd  run_combined_experiments.py  run_combined_experiments.sh  run_emmet_lora_compare.cmd  run_emmet_lora_compare.py  run_emmet_lora_compare.sh  run_emmet_lora_trust_replay.cmd  run_emmet_lora_trust_replay.py  run_emmet_lora_trust_replay.sh  run_lora_ablation.cmd  run_lora_ablation.sh  run_lora_native_ablation.cmd  run_lora_native_ablation.py  run_mvp_experiments.cmd  run_mvp_experiments.sh  run_replay_ablation.cmd  run_replay_ablation.py  setup_env.bat  setup_env.sh  test_baseline.py  test_replay_buffer.py
src/: __init__.py
tests/: test_lora_native_backend.py
(+807 files in other folders)
